[package]
name = "logfs"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ring = "0.16.20"
serde = { version = "1.0.126", features = ["derive"] }
sha2 = "0.9.5"
