[package]
name = "logfs"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.63"
bincode = "1.3.3"
bitflags = "1.3.2"
generic-array = "0.14.4"
md5 = "0.7.0"
parking_lot = "0.11.2"
rand = "0.8.4"
ring = "0.16.20"
serde = { version = "1.0.126", features = ["derive"] }
sha2 = "0.9.5"
structopt = "0.3.23"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.2", features = ["fmt", "env-filter"] }
zeroize = "1.4.3"
