[package]
name = "logfs"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
bincode = "1.3.3"
bitflags = "1.3.2"
brotli = "3.3.4"
clap = { version = "4.0.2", features = ["derive", "env"] }
generic-array = "0.14.6"
ring = "0.16.20"
serde = { version = "1.0.145", features = ["derive"] }
sha2 = "0.10.6"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["fmt", "env-filter"] }
zeroize = "1.5.7"
