[package]
name = "logfs"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
bincode = "1.3"
bitflags = { version = "2", features = ["serde"] }
brotli = "8"
generic-array = "0.14"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tracing = "0.1"
zeroize = "1.5"
