[package]
name = "logfs"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
bincode = "1.3"
bitflags = { version = "2.9", features = ["serde"] }
brotli = "8"
generic-array = "0.14"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tracing = "0.1"
zeroize = "1.5"
