[package]
name = "logfs-cli"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.0.2", features = ["derive", "env", "help"] }
logfs = { path = "../logfs" }
tracing-subscriber = { version = "0.3.15", features = ["fmt", "env-filter"] }
zeroize = "1.5.7"
